--- a/css/estilos-css-grid.css
+++ b/css/estilos-css-grid.css
@@ -129,7 +129,9 @@ nav a:hover {
     padding: 2rem 1.2rem;
 }
 
-#feature{
+#featur{
+    display: flex;
+    flex-direction: column;
     background-image: url('../img/index/bg-features.png');
     background-size: cover;
     background-position: 70% 30%;
@@ -140,10 +142,111 @@ nav a:hover {
     width: 100%;
     text-align: center;
     font-size: 1.5em;
-    padding: 0.5rem 0;
+    padding: 0.8rem 0;
 }
 
+.feature{
+    text-align: center;
+    padding: 1rem;
+    border-radius: 5px;
+    min-width: 180px;
+    max-width: 250px;
+}
+.feature-description1{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    margin-bottom: 1rem;
+    margin-top: 1rem;
+   
+}
+.feature-description2{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    margin-bottom: 1rem;
+    margin-top: 1rem;
+   
+}
 
+.feature i{
+    font-size: 2em;
+    margin-bottom: 1.5rem;
+}
+
+.feature-blue{
+    background-color: #00325eae;
+}
+
+.feature-black{
+    background-color: rgba(0,0,0,0.59);
+}
+
+#ubicacion{
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+}
+
+#ubicacion h2{
+    padding: 2rem;
+
+}
+
+#ubicacion iframe{
+    padding: 0.5rem 0.9rem;
+}
+
+.ubi-hr{
+    background-color: var(--azulclaro);
+    width: 85%;
+    align-self: center;
+}
+
+#opinion{
+    color: var(--blanco);
+    text-align: center;
+    height: 300px;
+}
+#opinion h2{
+    padding: 2rem 1rem;
+    background-color: var(--negro2);
+    height: 120px;
+    font-size: 2em;
+}
+footer{
+    background-color: var(--negro2);
+    color: var(--blanco);
+    text-align: justify;
+    font-family:   'Marcellus',serif;
+}
+footer i{
+    color: var(--blanco);
+    padding: 1rem 1rem;
+   
+}
+.text-fo{
+    padding: 1rem 1.5rem;
+}
+
+.text-fo2{
+    padding: 1rem 1rem;
+}
+.footer-h3{
+    display: flex;
+    flex-direction: row;
+    padding: 1rem 1.5rem;
+    font-family: 'Marcellus', serif;
+    justify-content: space-between;
+}
+.footer-r{
+    font-size: 1em;
+    color: var(--blanco);
+    padding: 1rem 1rem;
+   
+}
 /*Resolucion para tabletas*/
 @media screen and (min-width:768px) {
    
