--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -26,3 +26,9 @@ body {
 h1, h2, h3,h4, h5 {
     font-family: 'Marcellus', serif;
 }
+#container-grid{
+    display: grid;
+    grid-template:
+    "nav" auto
+    "banner" auto
+}
