--- a/css/formulario.css
+++ b/css/formulario.css
@@ -34,6 +34,7 @@ h1, h2, h3,h4, h5 {
     ;
 }
 .head{
+    grid-area: head;
     color: var(--blanco);
     background-color: var(--azuloscuro);
     text-align: center;
