--- a/css/formulario.css
+++ b/css/formulario.css
@@ -19,6 +19,10 @@
 }
 
 body {
+    background-image: url('https://www.peterlievano.com/wp-content/uploads/2018/03/panoramica_bogota_al_sur_2018-1.jpg');
+    height: 100%;
+    background-size: cover;
+    background-repeat: no-repeat;
     font-family: 'Roboto', sans-serif;
     font-size: 16px;
 }
@@ -27,23 +31,111 @@ h1, h2, h3,h4, h5 {
     font-family: 'Marcellus', serif;
 }
 #container-grid{
-    display: grid;
-    grid-template:
-    "head" auto
-    "cuerpo" auto
-    ;
+    display: flex;
+    flex-direction: column;
+   
 }
-.head{
-    grid-area: head;
+#head{
+    background-color: var(--azuloscuro);  
     color: var(--blanco);
-    background-color: var(--azuloscuro);
+  
+    width: 100%;
+    margin: auto;
+    height: 100px;
+    padding-top: 1rem ;
+    text-align: center;
+    gap: 1rem;
+  
+}
+#head img{
+    margin-top: 3%;
+    width: 5rem;
+}
+.tittle{
+    font-family: 'Marcellus', serif;
+    font-size: 3em;
+    margin-top: -4%;
+}
+
+.titlep{
+    font-family: 'Marcellus', serif;
+    font-size: 2em;
+    padding: 0.1rem;
+}
+
+
+#body{
+    border-radius: 1%;
+    max-width: 500px;
+    max-height: 800px;
+    margin-top: 1%;
+    width: 100%;
+    margin: auto;
+    background-color:rgba(255, 255, 255, 0.774);
+}
+
+#body h1{
     text-align: center;
 }
-.head img{
 
-    width: 4rem;
+#body form{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    align-content: center;
 }
 
-.tittle{
-    font-size: 3em;
+label{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: start;
+    align-content:flex-start;
+    padding: 1rem 1rem;
+    font-family: 'Roboto', sans-serif;
+}
+
+input,select{
+    height: 20px;
+    width: 300px;
+    outline: none;
+    border: none;
+
+}
+
+.genero{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    width: 30px;
+    outline: none;
+    border: none;
+}
+
+.genero1{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+
+
+}
+
+
+.navbar-button{
+    font-family: 'Marcellus', serif;
+        max-width: 360px;
+        width: 100%;
+        background-color: var(--negro2);
+        color: var(--blanco);
+}
+
+@media screen and (min-width:1308px) {
+
+    #container-grid{
+        max-width: 1200px;
+        margin: 0 auto;
+    }
+ 
+
 }
