--- a/css/login.css
+++ b/css/login.css
@@ -22,7 +22,8 @@ body {
     background-image: url('../img/login/bg-login.png');
     background-size: cover;
     background-position: 50% 50%;
-    min-height: 620px;
+    background-repeat: no-repeat;
+    height: 668px;
     font-family: 'Roboto', sans-serif;
     font-size: 16px;
 }
@@ -34,80 +35,94 @@ h1, h2, h3,h4, h5 {
 #contenedor{
     display: flex;
     flex-direction: column;
-    height: 400px;
+    height: 480px;
     width: 410px;
     align-items: center;
     color: var(--blanco);
     margin: auto;
+    padding:auto;
     border-radius: 3px;
     font-size: 18px;
-    background-color:rgba(80, 132, 211, 0.555);
-    margin-top: 11%;
+    background-color:rgba(55, 100, 167, 0.753);
+    margin-top: 6%;
 }
 
 #contenedor i{
-    text-decoration: none;
-    font-size: 30px;
-    width: 55px;
-    height: 55px;
-    line-height: 55px;
-    text-align: center;
     background-color: var(--Magenta);
     color:var(--blanco);
+    margin-top: 10%;
+    font-size: 30px;
+    width: 65px;
+    height: 65px;
+    line-height: 65px;
+    text-align: center;
     border-radius: 50%;
+    
 }
 label{
-    float: left;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: start;
+    align-content:flex-start;
+    padding: 0.2rem 1.5rem;
 }
+.cont{
+    margin-top: 9%;
+    padding: 0 1rem;
+}
+
 input{
-    box-shadow: 1px 1px 1px #0B3860;
-    float: inline-start;
-    height: 30px;
-    width: 70%;
+    height: 27px;
+    width: 330px;
     border: none;
     outline: none;
     border-radius: 2px;
-    color: #fff;
+    color: var(--negro2);
 }
 
+.imagen{
+    display: flex;
+    flex-direction: column;
+    justify-content:start;
+    align-self: start;
+}
 
 .imge{
-    position: relative;
-    margin-top: 43px;
-    padding: 20px;
-    display: flex;
+    margin-top: -27%;
+    padding: 0rem 1rem;
     float: left;
-    margin-right: 50%;
     width: 150px;
 }
 
 .imge2{
-    margin-top: -142px;
+    margin-top: -1px;
     width: 100%;
+
 }
 
 .log{
-    display: flex;
-    flex-direction: column;
-    text-decoration: none;
     display: none;
 }
+
 .item{
-    width: 70%;
+    width: 81%;
     height: 30px;
     background-color: var(--negro2);
     color: var(--blanco);
     border-radius: 3px;
-    margin-top:4% ;
+    margin-top:11% ;
 }
 
 
-.navbar-button{
+.navbar-button{  
+    background-color: var(--negro2);
+    color: var(--blanco);
     font-family: 'Marcellus', serif;
-        max-width: 360px;
-        width: 100%;
-        background-color: var(--negro2);
-        color: var(--blanco);
+    font-size: 1em;
+    max-width: 360px;
+    width: 100%;
+  
 }
 /*Resolucion para tabletas*/
 @media screen and (min-width:768px) {
@@ -118,12 +133,17 @@ input{
 /*Resolucion desktop*/
 @media screen and (min-width:1024px) {
 .log{
-    display: block;
-    text-decoration: none;
+      
+        text-decoration: none;
+        display: block;
+        font-size: 1em;
+    
 }
 .log p{
+    padding: 1rem 0rem;
     font-size: 0.9em;
     color: var(--blanco);
+    position: relative;
 }
 a{
     font-size: 1em;
