--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -54,8 +54,8 @@ nav{
     left: 0;
     font-size: 18px;
     z-index: 300;
-
 }
+
 .menu i{
     color:var(--blanco);
     text-align: center;
@@ -67,6 +67,7 @@ nav{
     background-image: url(../img/Group\ 200.svg);
     background-repeat: no-repeat;
     background-size: cover;
+    min-height: 40px;
    
 }
 
@@ -80,10 +81,21 @@ nav{
 i:hover{
     background-color: var(--azuloscuro);
     width: 100%;
-    
+}
+.sec2 p{
+    display:none;
 }
 .exit{
     margin-top: 50px;
+}
+.exit p{
+    display: none;
+}
+.re{
+    display: none;
+}
+.re2{
+    display: none;
 }
 #form{
     display: flex;
@@ -126,6 +138,17 @@ label{
     flex-direction: row;
     justify-content: center;
     width: 30px;
+    margin-right: 34%;
+}
+
+
+.item{
+
+    float: left;
+    background-color: var(--negro2);
+    color: var(--blanco);
+    border-radius: 3px;
+  
 }
 
 
@@ -136,6 +159,16 @@ label{
     color: var(--blanco);
 }
 
+.tittle{
+    display: none;
+}
+.sec3{
+    display: none;
+}
+.cpas{
+    display:none;
+}
+
 
 /*Resolucion macro*/
 @media screen and (min-width:1308px) {
@@ -143,7 +176,124 @@ label{
     #container-grid{
         max-width: 1200px;
         margin: 0 auto;
+     
+        display: flex;
+        flex-direction: column;
+    
+
+    }
+    .menu{
+        width: 270px;
+        height: 100%;
+    
+    }
+    .sec2{
+        display: none;
+    }
+    .sec3{
+        margin-top: 5%;
+        display: block;
+        display: flex;
+        flex-direction: column;
+        justify-content: start;
+        align-items: flex-start;
+        align-content: flex-start;
+        color: var(--blanco);
+        padding: 0 2rem;
+    }
+
+    .sec3 i{
+        font-size: 1.3em;
+    }
+    
+    .imga{
+        display: none;
+    }
+   
+    .tittle{
+        display: block;
+        color:var(--blanco);
+        font-size: 2.4em;
+        padding:2rem;
+    }
+    .tittle img{
+        width: 60px;
+        margin-top: 2%;
+    }
+
+    .exit{
+        display: flex;
+        flex-direction: column;
+        justify-content: start;
+        align-items: flex-start;
+        align-content: flex-start;
+        padding: 0 2rem;
+        margin-top: 54%;
+    }
+    .exit p{
+        display: block;
+        color: var(--blanco);
+
+    }
+    .exit:hover{
+        background-color: var(--negro);
+     
+    }
+    .re{
+        display: block;
+        display: flex;
+        flex-direction: column;
+        align-content: flex-end;
+        align-items: flex-end;
+        color: var(--blanco);
+        font-size: 1em;
+        padding: 0rem 1rem;
+    }
+    .re2{   
+        display: block;
+        display: flex;
+        flex-direction: column;
+        align-content: flex-end;
+        align-items: flex-end;
+        color: var(--blanco);
+        font-size: 0.7em;
+        padding: 0rem 1rem;
+    }
+    .imgn{
+        display: none;
+    }
+
+    #form{
+        width: 700px;
+        flex-direction: row;
+    }
+    .cpas{
+        display: block;
     }
  
+    .titleh2{
+        grid-area: titleh2;
+        font-size: 2em;
+        text-align: center;
+    
+    }
+
+    .column1{
+        grid-area: column1; 
+       
+    
+    }
+
+    .left{
+        grid-area: lef; 
+
+       
+    }
+
+    .right{
+        grid-area: righ;  
+       
+        
+    }
 
 }
