--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -169,6 +169,9 @@ label{
     display:none;
 }
 
+.righ{
+    display: none;
+}
 
 /*Resolucion macro*/
 @media screen and (min-width:1308px) {
@@ -176,11 +179,6 @@ label{
     #container-grid{
         max-width: 1200px;
         margin: 0 auto;
-     
-        display: flex;
-        flex-direction: column;
-    
-
     }
     .menu{
         width: 270px;
@@ -265,35 +263,20 @@ label{
 
     #form{
         width: 700px;
-        flex-direction: row;
     }
     .cpas{
         display: block;
     }
- 
-    .titleh2{
-        grid-area: titleh2;
-        font-size: 2em;
-        text-align: center;
-    
+    #form{
+        grid-template-columns: auto auto auto;
+        grid-template-rows: auto;
+        grid-template-areas: 
+        "titleh2  titleh2 titleh2"
+        "column1 lef righ"
+        ;
+        display: flex;
+        flex-direction:row;
     }
-
-    .column1{
-        grid-area: column1; 
-       
-    
-    }
-
-    .left{
-        grid-area: lef; 
-
-       
-    }
-
-    .right{
-        grid-area: righ;  
-       
-        
-    }
+   
 
 }
